--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ In order to escape Aincrad, Kirito will now have to interact and cooperate with 
 
       <div>
         <p>Please don't flame this site if you come across it from google for its shabby content. It is by no means an adequate list of anime recommendations for a beginner.</p>
-        <p>This site was created and uploaded for evaluation purposes on coursera's <a href="https://www.coursera.org/specializations/web-design">introduction to web development course</a> offered by the University of Michigan</p>
+        <p>This site was just created and uploaded for learning / evaluation / showcase purposes for an <a href="https://www.coursera.org/specializations/web-design">introduction to web development course</a> offered on coursera, as my first foray into frontend programming.</p>
       </div>
     </section>
 
